PA_Education/TestMenifest/force-app/main/default/objects/UrgentNotice__c/UrgentNotice__c.object-meta.xml
<CustomObject>
    <description>긴급 공지 용도 Object</description>
    <label>Urgent Notice</label>
    <nameField>
        <displayFormat>긴급 공지-{0000}</displayFormat>
        <label>긴급 공지 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>