PA_Education/TestMenifest/force-app/main/default/objects/UrgentNotice__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>긴급공지 내용</description>
    <label>내용</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>