PA_Education/TestMenifest/force-app/main/default/objects/UrgentNotice__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Front로 공지가 노출 종료되는 날짜</description>
    <label>공지 종료일</label>
    <type>Date</type>
</CustomField>