PA_Education/TestMenifest/force-app/main/default/objects/UrgentNotice__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Front로 노출되는 공지의 시작일</description>
    <label>공지 시작일</label>
    <type>Date</type>
</CustomField>